# jimmillerdrums-email

./: .gitignore  .pre-commit-config.yaml  BEST_PRACTICES.md  README.md  build.sh  data.tf  deploy-rust.sh  deploy.sh  justfile  lambda.tf  monitoring.tf  opentofu.tfvars.example  ses-email-identity.tf  ses-rules.tf  ses-smtp.tf  ses.tf  variables.tf
.github/: pull_request_template.md
.github/workflows/: ci-infra.yml  ci-rust.yml  deploy.yml  pr-title-lint.yml
.kiro/steering/: architecture.md  commit-standards.md  issues.md  lambda-standards.md  product.md  structure.md  tech.md
docs/: DEPLOYMENT_GUIDE.md  EMAIL_INFRASTRUCTURE_SUMMARY.md  GMAIL_INTEGRATION.md  LUNCH_AND_LEARN.md  MONITORING.md  RUST_MIGRATION.md
infra/: .terraform.lock.hcl  backend.tf  iam.tf  lambda.tf  monitoring.tf  outputs-monitoring.tf  outputs.tf  providers.tf  s3.tf  ses-email-identity.tf  ses-rules.tf  ses-smtp.tf  ses.tf  sns.tf  variables.tf
lambda/: Cargo.toml  index.js  package.json
lambda-legacy-backup/: Cargo.toml  DEPRECATED.md  README-nodejs.md  README.md  index.js  package-lock.json  package.json
lambda-legacy-backup/src/: main.rs
rust-lambda/: Cargo.toml  test-event.json
rust-lambda/src/: aws.rs  config.rs  domain.rs  email.rs  lib.rs  main.rs  mime.rs
rust-lambda/tests/: aws_integration_tests.rs  config_tests.rs  integration_tests.rs
rust-lambda/tests/fixtures/: multipart_gmail_original.eml  multipart_luma_original.eml  simple_text.eml
