[package]
name = "email-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13"
tokio = { version = "1", features = ["macros"] }
aws-config = "1.8"
aws-sdk-sesv2 = "1.110"
aws-sdk-s3 = "1.119"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mailparse = "0.16"

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
