[package]
name = "email-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "1.0"
tokio = { version = "1", features = ["macros"] }
aws-config = "1.8"
aws-sdk-sesv2 = "1.111"
aws-sdk-s3 = "1.120"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mailparse = "0.16"

[dev-dependencies]
aws-smithy-mocks = "0.2"
aws-sdk-s3 = { version = "1.120", features = ["test-util"] }
aws-sdk-sesv2 = { version = "1.111", features = ["test-util"] }
aws-smithy-types = "1.3.6"
aws-smithy-runtime-api = "1.10.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
